# ames_project_ML

./: README.md  pyproject.toml
data/docs/: notes.md
data/processed/: ames_with_correct_types.pkl
notebooks/: experiment.ipynb
